# guns-grit-gravity

./: .gitignore  Makefile  ProjectDefinition.md  app.py  engine.py  index.html  items.py  main.py  narrator.py  npcs.py  package-lock.json  parser.py  player.py  puzzles.py  pyproject.toml  save.py  vite.config.js  web_narrator.py  world.py
data/: items.json  npcs.json  rooms.json  strings.json
frontend/: package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: InputBar.svelte  StatsBar.svelte  game.js
frontend/src/lib/engine/: engine.js  narrator.js  npcs.js  parser.js  player.js  puzzles.js  save.js
src/lib/: OutputArea.svelte
src/lib/engine/: items.js  world.js
static/: app.js  index.html  style.css
tests/: test_engine.py  test_parser.py  test_player.py  test_world.py
