[tool.poetry]
name = "guns-grit-gravity-web"
version = "0.1.0"
description = "Guns, Grit & Gravity — web edition"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
websockets = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poetry.scripts]
play = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
